# ITL.Platform.SubscriptionVending

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: adr.md  azure_integration_issue.md  bug_report.md  config.yml  epic.md  feature_request.md  infrastructure_issue.md  provisioning_step_failure.md  spike.md  story.md  task.md
.github/scripts/: onboard-project.ps1  views-setup.json
.github/workflows/: build.yml  ci.yml  codeql.yml  docs.yml  labels.yml  pipeline.yml  release.yml
docs/: README.md  _config.yml  api.md  architecture.md  configuration.md  demo.html  development.md  index.html  infrastructure.md  kubernetes.md  provisioning-workflow.md  secrets.md
docs/_layouts/: default.html
infra/: main.bicep  params.bicepparam
infra/modules/: mgVendingRoleAssignment.bicep  subscriptionOwnerRoleAssignment.bicep
k8s/: configmap.yaml  deployment.yaml  service.yaml
src/subscription_vending/: __init__.py  config.py  main.py  models.py  workflow.py
src/subscription_vending/azure/: __init__.py  management_groups.py  notifications.py  policy.py  rbac.py  tags.py
src/subscription_vending/cli/: __init__.py  main.py  monitor.py
src/subscription_vending/core/: __init__.py  base.py  config.py  context.py  enums.py  events.py  exceptions.py  job.py  protocols.py  registry.py
src/subscription_vending/domain/: __init__.py  context.py
tests/: test_app.py  test_event_grid.py  test_notifications.py  test_rbac.py  test_retry.py  test_snow_gate.py  test_tags.py  test_workflow.py
(+58 files in other folders)
