[project]
name = "itl-subscription-vending"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "azure-identity>=1.16",
  "azure-mgmt-managementgroups>=1.0",
  "azure-mgmt-authorization>=4.0",
  "azure-mgmt-resource>=23.0",
  "azure-mgmt-subscription>=3.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subscription_vending"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
