[project]
name = "itl-subscription-vending"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "azure-identity>=1.16",
  "azure-mgmt-managementgroups>=1.0",
  "azure-mgmt-authorization>=4.0",
  "azure-mgmt-resource>=23.0",
  "azure-mgmt-subscription>=3.1",
  "azure-mgmt-consumption>=10.0",
  "azure-eventgrid>=4.16",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
cli = ["click>=8.1", "azure-storage-queue>=12.0"]  # httpx is already a core dependency

[project.scripts]
vending = "subscription_vending.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/subscription_vending/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/subscription_vending"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
